--- a/web/css/metro-bootstrap.css
+++ b/web/css/metro-bootstrap.css
@@ -177,6 +177,7 @@ a {
   h3 {
     orphans: 3;
     widows: 3;
+    color: white;
   }
   h2,
   h3 {
@@ -240,6 +241,14 @@ a {
 }
 .metro .border-bottom {
   border-bottom: 1px #eaeaea solid;
+}
+.metro .border-all-but-bottom{
+  border-left: 1px #35569a solid;
+  border-top: 1px #35569a solid;
+  border-right: 1px #35569a solid;
+}
+.metro .border-lightblue{
+  border: 1px #35569a solid;
 }
 .metro .collapse-separate {
   border-collapse: separate;
@@ -344,6 +353,12 @@ a {
 }
 .metro .no-margin {
   margin: 0  !important;
+}
+.metro .no-margin-bottom{
+  margin-bottom: 0 !important;
+}
+.metro .no-margin-right{
+  margin-right: 0 !important;
 }
 .metro .no-padding {
   padding: 0  !important;
@@ -505,6 +520,9 @@ a {
   font-weight: normal;
   z-index: 102;
   top: 0;
+}
+.metro .selected{
+  border: 4px #4390df solid;
 }
 .metro .rotate45 {
   -webkit-transform: rotate(45deg);
@@ -1125,8 +1143,8 @@ a {
   margin: 0 auto;
 }
 .metro .container10x6{
-  width: 1290px !important;
-  height: 870px !important;
+  width: 1300px !important;
+  height: 880px !important;
   margin: 0 auto;
 }
 .metro .page {
@@ -4813,8 +4831,8 @@ a {
 .metro .tile-group.seven {
   width: 910px;
 }
-.metro .tile-group .ten{
-    width:1300px;
+.metro .tile-group.ten{
+  width:1300px;
 }
 .metro .tile-group:first-child {
   margin-left: 80px;
@@ -4877,6 +4895,12 @@ a {
 }
 .metro .tile.quadro-vertical {
   height: 510px;
+}
+.metro .tile.penta{
+  width: 640px;
+}
+.metro .tile-penta-vertical{
+  height: 640px;
 }
 .metro .tile.selected {
   border: 4px #4390df solid;
@@ -7603,7 +7627,7 @@ a {
   margin: 0;
   padding: 0;
   border: 1px #555555 solid;
-  background-color: #ffffff;
+  background-color: #00aff0;
   position: relative;
   margin-bottom: 30px;
 }
@@ -7627,7 +7651,7 @@ a {
   margin: -20px 0;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 20px solid #ffffff;
+  border-bottom: 20px solid #00aff0;
 }
 .metro .balloon.bottom:after {
   top: 0;
@@ -7640,7 +7664,7 @@ a {
   left: 20px;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-top: 20px solid #ffffff;
+  border-top: 20px solid #00aff0;
 }
 .metro .balloon.top:after {
   margin-top: 1px;
@@ -7653,7 +7677,7 @@ a {
   margin-left: -1px;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-left: 20px solid #ffffff;
+  border-left: 20px solid #00aff0;
 }
 .metro .balloon.left:after {
   margin-left: 0;
@@ -7666,7 +7690,7 @@ a {
   margin: 0;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-right: 20px solid #ffffff;
+  border-right: 20px solid #00aff0;
 }
 .metro .balloon.right:after {
   left: -20px;
@@ -10674,4 +10698,12 @@ a {
   background-image: -o-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-size: 40px 40px;
+}
+.unselectable{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
